--- a/client/src/components/Main/style.css
+++ b/client/src/components/Main/style.css
@@ -6,6 +6,7 @@
 
 html {
     background-color: #ecf9ff;
+    height: 100%;
   }
   
   body {
@@ -14,6 +15,8 @@ html {
     font-weight: 400;
     letter-spacing: 0;
     padding: 1rem;
+    min-height: 100%;
+    padding-bottom: 0 !important; 
   }
   
   .main{
