--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -2,12 +2,11 @@
     /* position: fixed; */
     left: 0;
     bottom: 0;
-    right:0;
     width: 100%;
     height: 100px;
     background-image: url("https://i.imgur.com/ZRhg6RD.png");
     background-size: 100% 100%;
-    /* margin-top: 150px; */
+    margin-top: 150px;
 }
 
 @media (max-width: 539px) {
