--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -4,20 +4,34 @@
     bottom: 0;
     width: 100%;
     height: 100px;
-    background-image: url("https://i.imgur.com/ZRhg6RD.png");
+    background-image: url("https://i.imgur.com/VEhq8Ph.png");
     background-size: 100% 100%;
     margin-top: 150px;
+}
+
+
+#copyright {
+    font-size: 1rem;
+    padding-top: 40px;
+    color: #182131;
 }
 
 @media (max-width: 539px) {
     .rambler-footer {
         height: 80px;
   }
+  #copyright {
+      font-size: 1rem;
+      padding-top: 20px;
+  }
 }
 
 @media (min-width: 540px) {
     .rambler-footer {
         height: 100px;
+  }
+  #copyright {
+      padding-top: 30px;
   }
 }
 
