--- a/client/src/components/SearchForm/style.css
+++ b/client/src/components/SearchForm/style.css
@@ -1,7 +1,14 @@
  #searchButton {
-    width: 20%;
-margin-left: 40%;
-margin-right: 40%;
+    width: 30%;
+margin-left: 35%;
+margin-right: 35%;
 border-radius: 5px; 
 margin-top: 10px;
+}
+
+.input, .icon {
+    font-size:2.5vw;
+    width: 60%;
+    margin: 0 20%;
+    max-height: 50px;
 }
