--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,12 +1,14 @@
 .rambler-footer {
-    /* position: fixed; */
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
+    position: absolute;
+    left: -20px;
+    bottom: -100px;
+    right: -20px;
+    /* width: 100%; */
+    height: 130px;
     background-image: url("https://i.imgur.com/VEhq8Ph.png");
     background-size: 100% 100%;
-    margin-top: 150px;
+    overflow: hidden;
+    /* margin-top: 150px; */
 }
 
 
