--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -5,7 +5,7 @@
     right: -20px;
     /* width: 100%; */
     height: 130px;
-    background-image: url("https://i.imgur.com/VEhq8Ph.png");
+    background-image: url(../../assets/footer_no_text.png);
     background-size: 100% 100%;
     overflow: hidden;
     /* margin-top: 150px; */
