--- a/client/src/components/SearchResults/style.css
+++ b/client/src/components/SearchResults/style.css
@@ -57,6 +57,7 @@ html {
     margin: 0;
     padding: 0;
   }
+
   
   .cards_item {
     display: flex;
@@ -127,10 +128,15 @@ html {
   .card {
     background-color: white;
     border-radius: 0.25rem;
-    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 20px 40px -14px rgba(25,34,50, 0.575);
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    transition: box-shadow 0.3s ease-in-out;
+  }
+
+  .card:hover{
+    box-shadow: 0 20px 40px -14px rgb(25,34,50, 1);
   }
 
  .card_content {
