--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,16 @@ code {
   margin: 20px 25% 0;
 }
 
+#bucketListImage {
+  width: 50%;
+  margin: 0 25%;
+}
+
+#logImage {
+  width: 50%;
+  margin: 0 25%;
+}
+
 /* #detailImage {
   width: 70%;
   margin: 0 15%;
