--- a/client/src/components/Weather/style.css
+++ b/client/src/components/Weather/style.css
@@ -1,30 +1,16 @@
-.weather {
-    margin-top: 2%;
+.weather_icon {
+    display: block;
+    margin: 0 auto;
 }
-.main_weather {
-    display: flex;
-    justify-content: center;
+
+.card{
+    background-color: transparent;
 }
-.weather_card {
-    padding: 1%;
-    margin: 2%;
+
+.no_white {
+    margin-bottom: -20px;
 }
-.weather_cards_div {
-    flex-direction: row;
-    display: flex;
-    justify-content: center;
-}
-.weather_city {
-    font-size: 25px;
-}
-.weather_img {
-    display: flex;
-    justify-content: center;
-}
-.weather_title {
-    display: flex;
-    flex-direction: column;
-}
-.weather_title {
-    font-size: 40px;
+
+#display {
+    display: grid;
 }
