weather cards responsive

--- a/client/src/components/Weather/style.css
+++ b/client/src/components/Weather/style.css
@@ -14,3 +14,20 @@
 #display {
     display: grid;
 }
+
+@media (min-width: 920px) {
+    #display{
+    width: 20%;
+    }
+}
+@media (max-width: 919px) {
+    #display{
+    width: 33%;
+    }
+}
+
+@media (max-width: 539px) {
+    #display{
+        width: 80%;
+    }
+}
