--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,10 +37,26 @@ code {
   width: 40%;
 }
 
-#detail_card {
-  width: 80%;
-  margin: 0 10%;
-  text-align: justify;
+@media (max-width: 539px){
+  #detail_card {
+    width: 80%;
+    margin: 0 10%;
+    text-align: justify;
+}
+}
+
+@media (min-width: 540px){
+    #detail_card {
+    width: 50%;
+    margin: 0 25%;
+    text-align: justify;
+  }
+}
+
+
+
+.card_text {
+  font-size: 1.5em;
 }
 
 #detail_name {
@@ -48,6 +64,7 @@ code {
 }
 #detailImage {
   width: 100%;
+  max-height: 500px;
   height: auto;
 }
 
