rotate loading image

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,6 +51,19 @@ code {
   height: auto;
 }
 
+/* loading image rotate */
+.rotate {
+  animation: rotation 2s infinite linear;
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 .button {
   height: auto;
 }
