--- a/client/src/components/WelcomeMessage/style.css
+++ b/client/src/components/WelcomeMessage/style.css
@@ -1,3 +1,17 @@
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
 #welcome-message {
-    transition: 2s ease-in;
+    font-size: 1.5em;
+    opacity:0;  /* make things invisible upon start */
+	-webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+	-moz-animation:fadeIn ease-in 1;
+	animation:fadeIn ease-in 1;
+
+	-webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+	-moz-animation-fill-mode:forwards;
+	animation-fill-mode:forwards;
+
+	-webkit-animation-duration:1s;
+	-moz-animation-duration:1s;
+	animation-duration:1s;
 }
