--- a/client/src/components/NavbarLoggedIn/style.css
+++ b/client/src/components/NavbarLoggedIn/style.css
@@ -2,3 +2,10 @@
     max-height: none;
 }
 
+#nav-toggle-state {
+    display: none;
+  }
+  
+  #nav-toggle-state:checked ~ .navbar-menu {
+    display: block;
+  }
